--- a/bloc-jams2/styles/styles.css
+++ b/bloc-jams2/styles/styles.css
@@ -25,7 +25,7 @@ body {
   z-index: 1;
 }
 
-.navbar > .logo {
+.navbar .logo {
   position: relative; /* positioning will be explained in a resource */
      left: 2rem;
      cursor: pointer;  /* produces the finger-pointer icon when you hover over the logo */
@@ -61,6 +61,10 @@ body {
 .links-container .navbar-link:hover {
      color: rgb(233,50,117);
  }
+ .links-container .navbar-link:active {
+      color: rgb(233,50,117);
+      background-color: white;
+  }
 
 .container {
   margin: 0 auto;
